feat: agora é possivel gerar 3 receitas aleatórias a partir dos macro_ingredientes passados.